feat(record): add record toggle option

--- a/src/app/recordings/overview/overview.component.html
+++ b/src/app/recordings/overview/overview.component.html
@@ -19,6 +19,12 @@
         </ng-container>
         </tbody>
         <tfoot>
+        <tr>
+            <td colspan="5" class="text-right">
+                <button (click)="enableRecording()" *ngIf="!data.record" class="btn-primary">Enable recording</button>
+                <button (click)="disableRecording()"  *ngIf="data.record" class="btn-primary">Disable recording</button>
+            </td>
+        </tr>
         </tfoot>
     </table>
 </div>
