fix(variables-overview): remove incorrect html

--- a/src/app/variables/overview/overview.component.html
+++ b/src/app/variables/overview/overview.component.html
@@ -19,12 +19,7 @@
             (updated)="onUpdate($event)"></tr>
         </tbody>
         <tfoot>
-        <tr apimock-variable-overview-footer-row (updated)="onUpdate($event)">
-            <td colspan="3">
-                <button (click)="resetMocksToDefaults()" class="btn-primary">Reset to defaults</button>
-                <button (click)="setMocksToPassThrough()" class="btn-primary">Set to passThrough</button>
-            </td>
-        </tr>
+        <tr apimock-variable-overview-footer-row (updated)="onUpdate($event)"></tr>
         </tfoot>
     </table>
 </div>
