--- a/src/app/mocks/overview/overview.component.html
+++ b/src/app/mocks/overview/overview.component.html
@@ -25,7 +25,7 @@
         <tr>
             <td colspan="5" class="text-right">
                 <button (click)="resetMocksToDefaults()" class="btn-primary">Reset to defaults</button>
-                <button (click)="setMocksToPassThrough()" class="btn-primary">Set to passThrough</button>
+                <button (click)="setMocksToPassThrough()" class="btn-primary">All to passThrough</button>
             </td>
         </tr>
         </tfoot>
