--- a/src/app/mocks/overview/overview.component.scss
+++ b/src/app/mocks/overview/overview.component.scss
@@ -2,11 +2,20 @@
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/tables";
+@import "~bootstrap/scss/input-group";
 
 :host {
   h2 {
     font-size: 1.25rem;
     color: steelblue;
+  }
+
+  input, span {
+    margin: -0.175rem 0;
+    height: calc(1.8rem + 2px);
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    padding: 0.175rem 0.75rem 0.175rem 0.75rem;
   }
 
   table {
