--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,11 +7,11 @@ body {
 
 @font-face {
   font-family: 'icomoon';
-  src: url('assets/fonts/icomoon.eot?qyfo0p');
-  src: url('assets/fonts/icomoon.eot?qyfo0p#iefix') format('embedded-opentype'),
-  url('assets/fonts/icomoon.ttf?qyfo0p') format('truetype'),
-  url('assets/fonts/icomoon.woff?qyfo0p') format('woff'),
-  url('assets/fonts/icomoon.svg?qyfo0p#icomoon') format('svg');
+  src:  url('assets/fonts/icomoon.eot?37hrac');
+  src:  url('assets/fonts/icomoon.eot?37hrac#iefix') format('embedded-opentype'),
+  url('assets/fonts/icomoon.ttf?37hrac') format('truetype'),
+  url('assets/fonts/icomoon.woff?37hrac') format('woff'),
+  url('assets/fonts/icomoon.svg?37hrac#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -31,18 +31,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-chevron-down2:before {
-  content: "\e902";
-}
-
-.icon-chevron-up2:before {
-  content: "\e903";
-}
-
 .icon-chevron-down:before {
   content: "\e900";
 }
-
 .icon-chevron-up:before {
   content: "\e901";
+}
+.icon-chevron-down2:before {
+  content: "\e902";
+}
+.icon-chevron-up2:before {
+  content: "\e903";
+}
+.icon-filter:before {
+  content: "\ea5b";
 }
