--- a/src/app/variables/overview/overview.component.html
+++ b/src/app/variables/overview/overview.component.html
@@ -6,6 +6,14 @@
     </div>
     <h2>Available variables</h2>
 
+    <div class="input-group">
+        <input type="text" [(ngModel)]="searchText" class="form-control" placeholder="Filter variables">
+        <div class="input-group-append">
+            <span class="input-group-text icon-filter"></span>
+        </div>
+    </div>
+    <br />
+
     <table>
         <thead>
         <tr>
@@ -15,7 +23,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let variable of data.variables" apimock-variable-overview-row [variable]="variable"
+        <tr *ngFor="let variable of data.variables | filter:searchText" apimock-variable-overview-row [variable]="variable"
             (updated)="onUpdate($event)"></tr>
         </tbody>
         <tfoot>
