feat(search): add search feature specs

--- a/src/app/mocks/overview/overview.component.html
+++ b/src/app/mocks/overview/overview.component.html
@@ -6,7 +6,7 @@
     <h2>Available mocks</h2>
 
     <div class="input-group">
-        <input type="text" [(ngModel)]="searchText" class="form-control" placeholder="Filter mocks">
+        <input type="text" [(ngModel)]="searchText" class="form-control search-mocks" placeholder="Filter mocks">
         <div class="input-group-append">
             <span class="input-group-text icon-filter"></span>
         </div>
