--- a/src/app/variables/overview/overview.component.html
+++ b/src/app/variables/overview/overview.component.html
@@ -7,7 +7,7 @@
     <h2>Available variables</h2>
 
     <div class="input-group">
-        <input type="text" [(ngModel)]="searchText" class="form-control" placeholder="Filter variables">
+        <input type="text" [(ngModel)]="searchText" class="form-control search-variables" placeholder="Filter variables">
         <div class="input-group-append">
             <span class="input-group-text icon-filter"></span>
         </div>
