refactor(dev-interface): refactor alert

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,6 +16,9 @@
                     <a class="nav-link" routerLink="/variables">Variables</a>
                 </li>
                 <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link" routerLink="/presets">Presets</a>
+                </li>
+                <li class="nav-item" routerLinkActive="active">
                     <a class="nav-link" routerLink="/recordings">Recordings</a>
                 </li>
             </ul>
