--- a/src/app/variables/overview/overview-footer-row.component.scss
+++ b/src/app/variables/overview/overview-footer-row.component.scss
@@ -19,6 +19,13 @@
         background: lightgray;
         color: black;
       }
+
+      &:focus {
+        color: white;
+        background: steelblue;
+        border-color: steelblue;
+        outline: 0;
+      }
     }
   }
 }
