--- a/src/app/mocks/overview/overview-row.component.html
+++ b/src/app/mocks/overview/overview-row.component.html
@@ -1,15 +1,18 @@
 <td class="name" [innerHtml]="mock.name"></td>
 <td class="criteria">
-    <span [innerHtml]="mock.request.url"></span><span class="badge" ngClass="badge-{{mock.request.method | lowercase }}"
-                                                      [innerHtml]="mock.request.method"></span>
+    <span [innerHtml]="mock.request.url"></span>
+    <span class="badge" ngClass="badge-{{mock.request.method | lowercase }}" [innerHtml]="mock.request.method"></span>
 </td>
 <td class="scenario">
-    <select name="{{mock.name}}" [(ngModel)]="state.scenario"
-            (change)="scenario$.next($event.target.value)">
-        <option *ngFor="let response of mock.responses" [value]="response" [innerHtml]="response" [selected]=""></option>
+    <select name="{{mock.name}}" [(ngModel)]="state.scenario" (change)="scenario$.next($event.target.value)">
+        <option *ngFor="let response of mock.responses" [value]="response" [innerHtml]="response"
+                [selected]=""></option>
         <option value="passThrough" class="">passThrough</option>
     </select>
 </td>
-<td class="delay"><input type="number" min="0" (keyup)="delay$.next($event.target.value)" [(ngModel)]="state.delay">
+<td class="delay">
+    <input type="number" min="0" (keyup)="delay$.next($event.target.value)" [(ngModel)]="state.delay">
 </td>
-<td class="echo"><input type="checkbox" (click)="echo$.next($event.target.value)" [(ngModel)]="state.echo"></td>
+<td class="echo">
+    <input type="checkbox" (click)="echo$.next($event.target.value)" [(ngModel)]="state.echo">
+</td>
