--- a/src/app/recordings/overview/overview-row.component.scss
+++ b/src/app/recordings/overview/overview-row.component.scss
@@ -38,6 +38,13 @@
       color: white;
       border-radius: 0.25rem;
       margin-left: 5px;
+
+      &:focus {
+        color: white;
+        background: steelblue;
+        border-color: steelblue;
+        outline: 0;
+      }
     }
   }
 
