chore(plugin): update styling

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,11 +5,11 @@
   }
 
   .navbar-brand {
-    color: steelblue;
+    color: #4caf50;
   }
 
   .jumbotron {
-    background: steelblue;
+    background: #4caf50;
     color: white;
     text-align: center;
   }
