--- a/src/app/mocks/overview/overview.component.scss
+++ b/src/app/mocks/overview/overview.component.scss
@@ -7,7 +7,7 @@
 :host {
   h2 {
     font-size: 1.25rem;
-    color: steelblue;
+    color: #4caf50;
   }
 
   input, span {
@@ -26,7 +26,7 @@
     @extend .table-sm;
 
     thead {
-      color: steelblue;
+      color: #4caf50;
 
       th {
         padding: 0.175rem 0.75rem;
@@ -36,15 +36,20 @@
   }
 
   .btn-primary {
-    background: steelblue;
+    background: #4caf50;
     color: white;
     border-radius: 0.25rem;
+    border-color: #4caf50;
     margin-left: 5px;
+
+    &:hover {
+      border-color: #4caf50;
+    }
 
     &:focus {
       color: white;
-      background: steelblue;
-      border-color: steelblue;
+      background: #4caf50;
+      border-color: #4caf50;
       outline: 0;
     }
   }
