--- a/src/app/presets/overview/overview.component.scss
+++ b/src/app/presets/overview/overview.component.scss
@@ -7,7 +7,7 @@
 :host {
   h2 {
     font-size: 1.25rem;
-    color: steelblue;
+    color: #4caf50;
   }
 
   input, span {
@@ -26,7 +26,7 @@
     @extend .table-sm;
 
     thead {
-      color: steelblue;
+      color: #4caf50;
 
       th {
         padding: 0.175rem 0.75rem;
