--- a/src/app/recordings/overview/overview-row.component.scss
+++ b/src/app/recordings/overview/overview-row.component.scss
@@ -21,7 +21,7 @@
       }
 
       &-get {
-        background: steelblue;
+        background: #4caf50;
       }
 
       &-post {
@@ -34,15 +34,15 @@
     }
 
     .btn-primary {
-      background: steelblue;
+      background: #4caf50;
       color: white;
       border-radius: 0.25rem;
       margin-left: 5px;
 
       &:focus {
         color: white;
-        background: steelblue;
-        border-color: steelblue;
+        background: #4caf50;
+        border-color: #4caf50;
         outline: 0;
       }
     }
