--- a/src/app/recordings/overview/overview.component.scss
+++ b/src/app/recordings/overview/overview.component.scss
@@ -6,7 +6,7 @@
 :host {
   h2 {
     font-size: 1.25rem;
-    color: steelblue;
+    color: #4caf50;
   }
 
   table {
@@ -17,7 +17,7 @@
     @extend .table-sm;
 
     thead {
-      color: steelblue;
+      color: #4caf50;
 
       th {
         padding: 0.175rem 0.75rem;
@@ -27,15 +27,15 @@
   }
 
   .btn-primary {
-    background: steelblue;
+    background: #4caf50;
     color: white;
     border-radius: 0.25rem;
     margin-left: 5px;
 
     &:focus {
       color: white;
-      background: steelblue;
-      border-color: steelblue;
+      background: #4caf50;
+      border-color: #4caf50;
       outline: 0;
     }
   }
