--- a/src/app/variables/overview/overview-row.component.scss
+++ b/src/app/variables/overview/overview-row.component.scss
@@ -26,14 +26,14 @@
     }
 
     .btn-primary {
-      background: steelblue;
+      background: #4caf50;
       color: white;
       border-radius: 0.25rem;
 
       &:focus {
         color: white;
-        background: steelblue;
-        border-color: steelblue;
+        background: #4caf50;
+        border-color: #4caf50;
         outline: 0;
       }
     }
