chore(plugin): enable watch mode for serve task

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -25,7 +25,7 @@
 
             <span class="github-buttons d-none d-lg-inline">
                 <a class="github-button" href="https://github.com/ng-apimock/core" data-icon="octicon-star"
-                   data-show-count=true aria-label="Star ng-apimock/core on GitHub">Star</a>
+                   data-show-count="true" aria-label="Star ng-apimock/core on GitHub">Star</a>
       </span>
         </div>
     </section>
