Feature/set variables (#2)
* chore(plugin): update dependencies

* chore(plugin): update styling

* fix(header-component): fix broken github stars link

* fix(variables-overview-component): update the variables on change

* feat(variables-component): implement setting numbers and booleans

* chore(circleci): update version of node (v9 is no longer supported)

* chore(plugin): update interface screenshot

* chore(plugin): enable watch mode for serve task

* chore(plugin): update dependencies

* chore(circleci): fix circle ci config

* chore(package): fix linting issues

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,9 +24,8 @@
             </ul>
 
             <span class="github-buttons d-none d-lg-inline">
-        <iframe allowtransparency="true" scrolling="no" frameborder="0"
-                src="https://buttons.github.io/buttons.html#href=https%3A%2F%2Fgithub.com%2Fmdasberg%2Fng-apimock&amp;title=&amp;aria-label=Star%20mdasberg%2Fng-apimock%20on%20GitHub&amp;data-text=Star&amp;data-size=large&amp;data-show-count=true"
-                style="width: 120px; height: 28px; border: none;"></iframe>
+                <a class="github-button" href="https://github.com/ng-apimock/core" data-icon="octicon-star"
+                   data-show-count="true" aria-label="Star ng-apimock/core on GitHub">Star</a>
       </span>
         </div>
     </section>
