--- a/src/app/mocks/overview/overview-row.component.scss
+++ b/src/app/mocks/overview/overview-row.component.scss
@@ -34,6 +34,7 @@
       color: white;
       padding-top: 5px;
       margin-top: 2px;
+      background: #b1aeae;
 
       &-delete {
         background: crimson;
@@ -48,6 +49,10 @@
       }
 
       &-put {
+        background: seagreen;
+      }
+      
+      &-patch {
         background: seagreen;
       }
     }
