feat(createpreset): create presets from overview page

--- a/src/app/mocks/overview/overview.component.html
+++ b/src/app/mocks/overview/overview.component.html
@@ -32,6 +32,7 @@
             <td colspan="5" class="text-right">
                 <button (click)="resetMocksToDefaults()" class="btn-primary">Reset to defaults</button>
                 <button (click)="setMocksToPassThrough()" class="btn-primary">All to passThrough</button>
+				<button (click)="saveAsPreset()" class="btn-primary">Save mocked state as Preset</button>
             </td>
         </tr>
         </tfoot>
