--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,52 +1,78 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/scss/bootstrap";
-
+@import "~@angular/material/_theming";
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+// this loads the overlay styling. Can be removed if we move to material completly
+@include cdk-overlay();
+mat-dialog-container {
+	background-color: #fff;
+}
+
+.btn-primary {
+    background: #4caf50;
+    color: white;
+    border-radius: 0.25rem;
+    border-color: #4caf50;
+    margin-left: 5px;
+
+    &:hover {
+      border-color: #4caf50;
+    }
+
+    &:focus {
+      color: white;
+      background: #4caf50;
+      border-color: #4caf50;
+      outline: 0;
+    }
+  }
 
 @font-face {
-  font-family: 'icomoon';
-  src: url('assets/fonts/icomoon.eot?37hrac');
-  src: url('assets/fonts/icomoon.eot?37hrac#iefix') format('embedded-opentype'),
-  url('assets/fonts/icomoon.ttf?37hrac') format('truetype'),
-  url('assets/fonts/icomoon.woff?37hrac') format('woff'),
-  url('assets/fonts/icomoon.svg?37hrac#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
+	font-family: "icomoon";
+	src: url("assets/fonts/icomoon.eot?37hrac");
+	src: url("assets/fonts/icomoon.eot?37hrac#iefix") format("embedded-opentype"),
+		url("assets/fonts/icomoon.ttf?37hrac") format("truetype"),
+		url("assets/fonts/icomoon.woff?37hrac") format("woff"),
+		url("assets/fonts/icomoon.svg?37hrac#icomoon") format("svg");
+	font-weight: normal;
+	font-style: normal;
 }
 
-[class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
+[class^="icon-"],
+[class*=" icon-"] {
+	/* use !important to prevent issues with browser extensions that change fonts */
+	font-family: "icomoon" !important;
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
 
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 .icon-chevron-down:before {
-  content: "\e900";
+	content: "\e900";
 }
 
 .icon-chevron-up:before {
-  content: "\e901";
+	content: "\e901";
 }
 
 .icon-chevron-down2:before {
-  content: "\e902";
+	content: "\e902";
 }
 
 .icon-chevron-up2:before {
-  content: "\e903";
+	content: "\e903";
 }
 
 .icon-filter:before {
-  content: "\ea5b";
+	content: "\ea5b";
 }
