--- a/src/app/presets/create-preset/create-preset.component.scss
+++ b/src/app/presets/create-preset/create-preset.component.scss
@@ -1,3 +1,4 @@
+@use '~@angular/material' as mat;
 @import '~src/styles';
 
 :host {
@@ -12,7 +13,7 @@
 	}
 
 	h2 {
-		color: mat-color($ngApimock-demoApplication-primary);
+		color: mat.get-color-from-palette($ngApimock-demoApplication-primary);
 		margin: 0;
 	}
 
