--- a/src/app/presets/details/details.component.scss
+++ b/src/app/presets/details/details.component.scss
@@ -1,3 +1,4 @@
+@use '~@angular/material' as mat;
 @import '~src/styles';
 
 :host {
@@ -8,7 +9,7 @@
     mat-header-cell {
       padding-left: 10px;
       font-size: 16px;
-      color: mat-color($ngApimock-demoApplication-primary);
+      color: mat.get-color-from-palette($ngApimock-demoApplication-primary);
     }
   }
 
