--- a/src/app/presets/create-preset/create-preset.component.html
+++ b/src/app/presets/create-preset/create-preset.component.html
@@ -2,21 +2,21 @@
     <h2>Create Preset</h2>
     <span class="info">This will create a preset based on the current selected scenarios.</span>
     <mat-form-field>
-        <input matInput formControlName="name" placeholder="Name" required/>
+        <input class="name" matInput formControlName="name" placeholder="Name" required/>
     </mat-form-field>
 
     <div class="error" *ngIf="this.duplicate">A preset with this name already exists. Please choose
         another one.
     </div>
     <br/>
-    <mat-checkbox color="primary" formControlName="excludeMocks">
+    <mat-checkbox class="excludeMocks" color="primary" formControlName="excludeMocks">
         Exclude mocks*
     </mat-checkbox>
-    <mat-checkbox color="primary" formControlName="excludeVariables">
+    <mat-checkbox class="excludeVariables" color="primary" formControlName="excludeVariables">
         Exclude variables*
     </mat-checkbox>
     <br/>
-    <div class="error" *ngIf="!this.hasData">A preset needs to contain at lease mocks or variables.
+    <div class="error" *ngIf="!this.hasData">A preset needs to contain at least mocks or variables.
         Please deselect one of the excludes.
     </div>
     <br/>
