--- a/src/app/common/mat-table-filter/filter.component.scss
+++ b/src/app/common/mat-table-filter/filter.component.scss
@@ -1,5 +1,4 @@
-@use '~@angular/material' as mat;
-@import '~src/styles';
+@import '../../../theme';
 
 :host {
   span {
@@ -28,20 +27,20 @@
     .icon-filter {
       display: inherit;
       padding: .375rem .75rem;
-      background-color: mat.get-color-from-palette($ngApimock-demoApplication-secondary, 100);
-      border: 1px solid mat.get-color-from-palette($ngApimock-demoApplication-secondary, 300);
+      background-color: mat-color($ngapimock-app-secondary, 100);
+      border: 1px solid mat-color($ngapimock-app-secondary, 300);
       border-radius: 0 .25rem .25rem 0;
     }
   }
 
   input {
-    border: 1px solid mat.get-color-from-palette($ngApimock-demoApplication-secondary, 300);
+    border: 1px solid mat-color($ngapimock-app-secondary, 300);
   }
 
   input:focus {
     z-index: 10;
     outline: none !important;
-    box-shadow: 0 0 0 0.2rem mat.get-color-from-palette($ngApimock-demoApplication-primary, 300);
+    box-shadow: 0 0 0 0.2rem mat-color($ngapimock-app-primary, 300);
   }
 }
 
