--- a/src/app/recordings/overview/overview.component.scss
+++ b/src/app/recordings/overview/overview.component.scss
@@ -1,7 +1,8 @@
-@use '~@angular/material' as mat;
-@import '~src/styles';
+@import '../../../theme';
 
 :host {
+
+
   /* badge */
   span {
     padding-top: 7px;
@@ -25,13 +26,13 @@
 
     &-get {
       .mat-badge-content {
-        background: mat.get-color-from-palette($ngApimock-demoApplication-primary, 500);
+        background: mat-color($ngapimock-app-primary, 500);
       }
     }
 
     &-post, &-put, &-patch {
       .mat-badge-content {
-        background: mat.get-color-from-palette($ngApimock-demoApplication-primary, 800);
+        background: mat-color($ngapimock-app-primary, 800);
       }
     }
   }
@@ -43,7 +44,7 @@
     mat-header-cell {
       padding-left: 10px;
       font-size: 16px;
-      color: mat.get-color-from-palette($ngApimock-demoApplication-primary);
+      color: mat-color($ngapimock-app-primary);
     }
   }
 
@@ -64,6 +65,22 @@
   }
   .mat-column-options {
     flex: 0 0 11%;
+  }
+
+  mat-header-cell.mat-column-options {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 28px;
+  }
+
+  mat-cell.mat-column-options {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 24px;
+  }
+
+  mat-dialog-container {
+    overflow: visible !important;
   }
 
 }
