--- a/src/app/variables/overview/overview.component.scss
+++ b/src/app/variables/overview/overview.component.scss
@@ -1,5 +1,4 @@
-@use '~@angular/material' as mat;
-@import '~src/styles';
+@import '../../../theme';
 
 :host {
   mat-header-row {
@@ -9,7 +8,7 @@
     mat-header-cell {
       padding-left: 10px;
       font-size: 16px;
-      color: mat.get-color-from-palette($ngApimock-demoApplication-primary);
+      color: mat-color($ngapimock-app-primary);
     }
   }
 
@@ -19,7 +18,7 @@
 
     mat-footer-cell {
       padding: 0 10px 0 10px;
-      color: mat.get-color-from-palette($ngApimock-demoApplication-primary);
+      color: mat-color($ngapimock-app-primary);
     }
   }
 
@@ -35,13 +34,25 @@
     flex: 0 0 10%;
   }
 
+  mat-header-cell.mat-column-options {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 28px;
+  }
+
+  mat-cell.mat-column-options {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 24px;
+  }
+
   input {
-    border: 1px solid mat.get-color-from-palette($ngApimock-demoApplication-secondary, 300);
+    border: 1px solid mat-color($ngapimock-app-secondary, 300);
   }
 
   input:focus {
     z-index: 10;
     outline: none !important;
-    box-shadow: 0 0 0 0.2rem mat.get-color-from-palette($ngApimock-demoApplication-primary, 300);
+    box-shadow: 0 0 0 0.2rem mat-color($ngapimock-app-primary, 300);
   }
 }
